<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">Elf Editor</string>
    <string name="ok">Ok</string>
	<string name="no">No</string>
    <string name="cancel">Cancel</string>
	<string name="not_found">Not found!</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="failure">Failure</string>
    <string name="parsing">Parsing...</string>
    <string name="saving">Saving...</string>
    <string name="ensure_save">Are you sure you want to save?</string>
    <string name="out_of_memory">Memory overflow!</string>
    <string name="crash_message">Unfortunately, the program crashed.  Please send \"ElfEditor_CrashLog.log\" in the memory card directory to the developer for repair.</string>
	<string name="permission_alert">Without access to the storage, the application will not be able to work!</string>
	<string name="copied">Copied</string>
	<string name="install_fm">Please install the file manager</string>
	<string name="select_file">Please select a file!</string>
	<string name="err_rename">Error when renamed the file: %s</string>
	<string name="copy">Copy text</string>
	<string name="b64">Decode base64</string>
	<string name="open">Open</string>
	<string name="save">Save</string>
	<string name="search">Search</string>
	<string name="exit">Exit</string>
	<string name="opened">Opened file</string>
	<string name="exit_toast">To exit, press \"Back\" again</string>
	<string name="go_to">Go to line</string>
	<string name="line_num">Line numbers</string>
	<string name="dark">Dark theme</string>
	<string name="select">Select a file</string>
	<string name="thanks">Give thanks</string>
	<string name="github">GitHub</string>
	<string name="about">About</string>
	<string name="about_text">ELF files (executable and *.so) editor for Android.</string>
</resources>
