<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item
        android:id="@+id/open"
        android:title="@string/open"/>
	
	<item
        android:id="@+id/save"
        android:title="@string/save"/>
	
	<item
        android:id="@+id/search"
        android:title="@string/search"/>
	
	<item
        android:id="@+id/go_to"
        android:title="@string/go_to"/>
	
	<group
		android:checkableBehavior="all">
		
		<item
			android:id="@+id/line_num"
			android:title="@string/line_num" />
		
		<item
			android:id="@+id/dark_theme"
			android:title="@string/dark" />
		
	</group>
	
	<item
        android:id="@+id/opened"
		android:visible="false"
        android:title="@string/opened"/>
	
	<item
        android:id="@+id/about"
        android:title="@string/about"/>
	
	<item
        android:id="@+id/exit"
        android:title="@string/exit"/>
    
</menu>
